test/libsolidity/syntaxTests/arrayLength/tuples.sol
contract C {
    uint[(1,2)] a15;
}
// ----
// TypeError: (22-27): Invalid array length, expected integer literal or constant expression.
